--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -10,11 +10,11 @@
         <section class="hero">
             <div class="container">
                 <div class="row align-items-center pt-5 mt-lg-4 mt-0 pb-6">
-                    <div class="col-lg-12 d-flex align-items-center">
-                        <a href="index.html" class="text-decoration-none">
+                    <div class="col-lg-12">
+                        <a href="index.html" class="text-decoration-none d-flex align-items-center">
                             <icon class="icon icon-arrow-back text-dark fs-2 d-grid"></icon>
+                            <h2 class="fs-1 text-dark ps-lg-4 ps-2 mb-0">Contact <span class="text-success">us</span></h2>
                         </a>
-                        <h2 class="fs-1 text-dark ps-lg-4 ps-2 mb-0">Contact <span class="text-success">us</span></h2>
                     </div>
                 </div>
                 <div class="row mb-7">
