--- a/src/html_partials/header.html
+++ b/src/html_partials/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand d-block" href="./index.html">
+            <a class="navbar-brand navbar-brand ms-lg-0 mx-auto" href="./index.html">
                 <img src="img/logo.svg" class="navbar-brand-img" alt="logo">
             </a>
             <div class="dropdown">
