--- a/contact-us.html
+++ b/contact-us.html
@@ -44,7 +44,7 @@
                     </div>
                 </div>
                 <div class="row mb-7">
-                    <div class="col-lg-5 col-sm-6">
+                    <div class="col-xxxxl-4 col-lg-5 col-sm-6">
                         <div class="row">
                             <div class="col-lg-6 col-sm-6 col-3 position-relative text-start">
                                 <img src="img/hero-img-2.png" alt="Image" class="hero-img-decor-one">
@@ -54,7 +54,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-5 col-sm-6 col-11 position-relative align-self-center">
+                    <div class="col-xxxxl-4 offset-xxxxl-1 col-lg-5 col-sm-6 col-11 position-relative align-self-center">
                         <div class="bg-white rounded-2 shadow-xl p-lg-5 p-4">
                             <h4 class="text-success">Get In Touch</h4>
                             <p class="mb-4">We are here for you! How can we help?</p>
@@ -79,9 +79,6 @@
                             </form>
                         </div>
                         <div class="contact-form-decor"></div>
-                    </div>
-                    <div class="col-lg-2 position-relative">
-                        <img src="img/step-img-4.png" alt="Image" class="step-decor-img d-lg-block d-none">
                     </div>
                 </div>
             </div>
