--- a/index.html
+++ b/index.html
@@ -47,12 +47,7 @@
                         <form class="needs-validation d-lg-block d-none" novalidate>
                             <div class="row mb-lg-4 mb-2">
                                 <div class="col-lg-5">
-                                    <div class="input-group">
-                                        <span class="input-group-text" id="basic-email">
-                                            <icon class="icon icon-mail text-success icon-size"></icon>
-                                        </span>
-                                        <input type="text" class="form-control" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
-                                    </div>
+                                    <input type="email" class="form-control prepand-icon mail" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
                                 </div>
                                 <div class="col-lg-4 offset-lg-3 text-end">
                                     <div class="grecaptcha recaptcha-style"></div>
@@ -61,25 +56,17 @@
 
                             <div class="row">
                                 <div class="col-lg-3 col-5 pe-1">
-                                    <div class="input-group rounded-1">
-                                        <span class="input-group-text" id="basic-country">
-                                                <icon class="icon icon-flag text-success icon-size"></icon>
-                                            </span>
-                                        <select class="selectpicker form-control" title="Country Code" id="basic-country">
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                            </select>
-                                    </div>
+                                    <select class="selectpicker form-control prepand-icon flag" title="Country Code" id="basic-country">
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                    </select>
                                 </div>
                                 <div class="col-lg-5 col-7 ps-1">
-                                    <div class="input-group rounded-1 has-validation">
-                                        <span class="input-group-text" id="basic-phone">
-                                                <icon class="icon icon-mobile text-success icon-size"></icon>
-                                            </span>
-                                        <input type="text" class="form-control" placeholder="Enter your phone number" aria-label="Phone number" aria-describedby="basic-phone" required>
+                                    <div class="has-validation">
+                                        <input type="number" class="form-control prepand-icon mobile" placeholder="Enter your phone number" aria-label="Phone number" aria-describedby="basic-phone" required>
                                         <div class="invalid-feedback">
                                             Invalid number*
                                         </div>
@@ -107,12 +94,7 @@
                         <form class="needs-validation" novalidate>
                             <div class="row mb-lg-4 mb-2">
                                 <div class="col-lg-5 col-7">
-                                    <div class="input-group">
-                                        <span class="input-group-text" id="basic-email">
-                                            <icon class="icon icon-mail text-success icon-size d-grid"></icon>
-                                        </span>
-                                        <input type="text" class="form-control" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
-                                    </div>
+                                    <input type="email" class="form-control prepand-icon mail" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
                                 </div>
                                 <div class="col-lg-4 offset-lg-3 col-5 offset-0 text-end">
                                     <div class="grecaptcha recaptcha-style"></div>
@@ -121,25 +103,17 @@
 
                             <div class="row">
                                 <div class="col-lg-3 col-3 pe-1">
-                                    <div class="input-group rounded-1">
-                                        <span class="input-group-text" id="basic-country">
-                                                <icon class="icon icon-flag text-success icon-size d-grid"></icon>
-                                            </span>
-                                        <select class="selectpicker form-control" title="Country Code" id="basic-country">
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                                <option>SPAIN (+34)</option>
-                                            </select>
-                                    </div>
+                                    <select class="selectpicker form-control prepand-icon flag" title="Country Code" id="basic-country">
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                        <option>SPAIN (+34)</option>
+                                    </select>
                                 </div>
-                                <div class="col-lg-5 col-5 px-1">
-                                    <div class="input-group rounded-1 has-validation">
-                                        <span class="input-group-text" id="basic-phone">
-                                                <icon class="icon icon-mobile text-success icon-size d-grid"></icon>
-                                            </span>
-                                        <input type="text" class="form-control" placeholder="Enter your phone number" aria-label="Phone number" aria-describedby="basic-phone" required>
+                                <div class="col-lg-5 col-5 ps-1">
+                                    <div class="has-validation">
+                                        <input type="number" class="form-control prepand-icon mobile" placeholder="Enter your phone number" aria-label="Phone number" aria-describedby="basic-phone" required>
                                         <div class="invalid-feedback">
                                             Invalid number*
                                         </div>
