--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="hero">
             <div class="container">
                 <div class="row align-items-center pt-6 pb-7">
-                    <div class="col-xxxxl-7 col-lg-6 col-9">
+                    <div class="col-xxxxl-5 col-lg-6 col-9">
                         <h1 class="text-dark text-capitalize text-lg-start mb-3">Get <span class="heading-color">unlimited access</span>
                         </h1>
                         <h4 class="text-capitalize text-dark fw-normal mb-lg-4 mb-3">To more than 130 of the world’s <span class="d-lg-block d-inline">Top magazines and newspapers</span>
@@ -45,12 +45,14 @@
                         </p>
 
                         <form class="needs-validation d-lg-block d-none" novalidate>
+                            <div class="row mb-2">
+                                <div class="col-lg-4">
+                                    <div class="grecaptcha recaptcha-style"></div>
+                                </div>
+                            </div>
                             <div class="row mb-lg-4 mb-2">
                                 <div class="col-lg-5">
                                     <input type="email" class="form-control prepand-icon mail" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
-                                </div>
-                                <div class="col-lg-4 offset-lg-3 text-end">
-                                    <div class="grecaptcha recaptcha-style"></div>
                                 </div>
                             </div>
 
@@ -72,13 +74,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-12 mt-lg-0 mt-4 text-lg-end text-center">
+                                <div class="col-lg-4 col-12 mt-lg-0 mt-4 text-lg-start text-center">
                                     <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#requestAcceptedModal">Send SMS</button>
                                 </div>
                             </div>
                         </form>
                     </div>
-                    <div class="col-xxxxl-5 offset-xxxxl-0 col-lg-5 offset-lg-1 col-3 ps-0 ps-lg-3">
+                    <div class="col-xxxxl-5 offset-xxxxl-2 col-lg-5 offset-lg-1 col-3 ps-0 ps-lg-3">
                         <div class="row">
                             <div class="col-xxxxl-6 col-lg-6 text-center text-md-end position-relative">
                                 <img src="img/hero-img-1.png" alt="Image" class="hero-img-decor-one">
@@ -93,11 +95,13 @@
                     <div class="col-lg-12">
                         <form class="needs-validation" novalidate>
                             <div class="row mb-lg-4 mb-2">
-                                <div class="col-lg-5 col-7">
-                                    <input type="email" class="form-control prepand-icon mail" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
-                                </div>
                                 <div class="col-lg-4 offset-lg-3 col-5 offset-0 text-end">
                                     <div class="grecaptcha recaptcha-style"></div>
+                                </div>
+                            </div>
+                            <div class="row mb-lg-4 mb-2">
+                                <div class="col-lg-5 col-7">
+                                    <input type="email" class="form-control prepand-icon mail" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
                                 </div>
                             </div>
 
