--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                             </div>
 
                             <div class="row">
-                                <div class="col-lg-3 col-5 pe-1">
+                                <div class="col-xxxxl-2 col-lg-3 col-5 pe-1">
                                     <select class="selectpicker form-control prepand-icon flag" title="Country Code" id="basic-country">
                                         <option>SPAIN (+34)</option>
                                         <option>SPAIN (+34)</option>
@@ -40,7 +40,7 @@
                                         <option>SPAIN (+34)</option>
                                     </select>
                                 </div>
-                                <div class="col-lg-5 col-7 ps-1">
+                                <div class="col-xxxxl-4 col-lg-5 col-7 ps-1">
                                     <div class="has-validation">
                                         <input type="number" class="form-control prepand-icon mobile" placeholder="Enter your phone number" aria-label="Phone number" aria-describedby="basic-phone" required>
                                         <div class="invalid-feedback">
@@ -48,7 +48,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-12 mt-lg-0 mt-4 text-lg-start text-center">
+                                <div class="col-xxxxl-3 col-lg-4 col-12 mt-lg-0 mt-4 text-lg-start text-center">
                                     <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#requestAcceptedModal">Send SMS</button>
                                 </div>
                             </div>
