--- a/index.html
+++ b/index.html
@@ -95,18 +95,18 @@
                     <div class="col-lg-12">
                         <form class="needs-validation" novalidate>
                             <div class="row mb-lg-4 mb-2">
-                                <div class="col-lg-4 offset-lg-3 col-5 offset-0 text-end">
+                                <div class="col-lg-4 offset-lg-3 col-5 offset-0 text-end d-lg-block d-none">
                                     <div class="grecaptcha recaptcha-style"></div>
                                 </div>
                             </div>
                             <div class="row mb-lg-4 mb-2">
-                                <div class="col-lg-5 col-7">
+                                <div class="col-lg-5 col-8">
                                     <input type="email" class="form-control prepand-icon mail" placeholder="Enter your email" aria-label="Email" aria-describedby="basic-email">
                                 </div>
                             </div>
 
                             <div class="row">
-                                <div class="col-lg-3 col-3 pe-1">
+                                <div class="col-lg-3 col-5 pe-lg-1 pe-0 mb-lg-0 mb-2">
                                     <select class="selectpicker form-control prepand-icon flag" title="Country Code" id="basic-country">
                                         <option>SPAIN (+34)</option>
                                         <option>SPAIN (+34)</option>
@@ -115,7 +115,7 @@
                                         <option>SPAIN (+34)</option>
                                     </select>
                                 </div>
-                                <div class="col-lg-5 col-5 ps-1">
+                                <div class="col-lg-5 col-8 ps-lg-1 ps-initial mb-lg-0 mb-3">
                                     <div class="has-validation">
                                         <input type="number" class="form-control prepand-icon mobile" placeholder="Enter your phone number" aria-label="Phone number" aria-describedby="basic-phone" required>
                                         <div class="invalid-feedback">
@@ -123,7 +123,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-4 text-end">
+                                <div class="col-5 text-center d-lg-none d-block mb-lg-0 mb-2 mx-auto">
+                                    <div class="grecaptcha recaptcha-style"></div>
+                                </div>
+                                <div class="col-lg-4 col-12 text-center">
                                     <button type="submit" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#requestAcceptedModal">Send SMS</button>
                                 </div>
                             </div>
