--- a/contact-us.html
+++ b/contact-us.html
@@ -58,16 +58,16 @@
                         <div class="bg-white rounded-2 shadow-xl p-lg-5 p-4">
                             <h4 class="text-success">Get In Touch</h4>
                             <p class="mb-4">We are here for you! How can we help?</p>
-                            <form class="contact-form">
+                            <form class="contact-form needs-validation" novalidate>
                                 <div class="mb-lg-3 mb-2">
-                                    <input type="text" class="form-control" id="inputName" placeholder="Enter your name">
+                                    <input type="text" required class="form-control" id="inputName" placeholder="Enter your name">
                                 </div>
                                 <div class="mb-lg-3 mb-2">
-                                    <input type="email" class="form-control" id="inputEmail" placeholder="Enter your email address" aria-describedby="emailHelp">
+                                    <input type="email" required class="form-control" id="inputEmail" placeholder="Enter your email address" aria-describedby="emailHelp">
                                 </div>
 
                                 <div class="mb-lg-3 mb-3">
-                                    <textarea class="form-control" id="messageTextarea" rows="5" placeholder="Message"></textarea>
+                                    <textarea class="form-control" required id="messageTextarea" rows="5" placeholder="Message"></textarea>
                                 </div>
 
                                 <div class="mb-lg-4 mb-3">
