--- a/contact-us.html
+++ b/contact-us.html
@@ -61,13 +61,22 @@
                             <form class="contact-form needs-validation" novalidate>
                                 <div class="mb-lg-3 mb-2">
                                     <input type="text" required class="form-control" id="inputName" placeholder="Enter your name">
+                                    <div class="invalid-feedback">
+                                        Required field*
+                                    </div>
                                 </div>
                                 <div class="mb-lg-3 mb-2">
                                     <input type="email" required class="form-control" id="inputEmail" placeholder="Enter your email address" aria-describedby="emailHelp">
+                                    <div class="invalid-feedback">
+                                        Required field*
+                                    </div>
                                 </div>
 
                                 <div class="mb-lg-3 mb-3">
                                     <textarea class="form-control" required id="messageTextarea" rows="5" placeholder="Message"></textarea>
+                                    <div class="invalid-feedback">
+                                        Required field*
+                                    </div>
                                 </div>
 
                                 <div class="mb-lg-4 mb-3">
