--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p class="mb-lg-4 mb-lg-3 mb-0 pb-lg-1 pb-0">In order to unsubscribe from The Kiosk, kindly give us your email <span class="d-lg-block d-inline">address and mobile phone number. We will send you an SMS.</span>
                         </p>
 
-                        <form class="needs-validation d-lg-block d-none" novalidate>
+                        <form id="subscribeForm" class="needs-validation d-lg-block d-none" novalidate>
                             <div class="row mb-2">
                                 <div class="col-lg-4">
                                     <div class="grecaptcha recaptcha-style"></div>
